2.1/_sources/autoapi/neural_compressor/compression/pruner/criteria/index.rst.txt
:py:mod:`neural_compressor.compression.pruner.criteria`
=======================================================

.. py:module:: neural_compressor.compression.pruner.criteria

.. autoapi-nested-parse::

   pruning criterion.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   neural_compressor.compression.pruner.criteria.PruningCriterion
   neural_compressor.compression.pruner.criteria.MagnitudeCriterion
   neural_compressor.compression.pruner.criteria.GradientCriterion
   neural_compressor.compression.pruner.criteria.SnipCriterion
   neural_compressor.compression.pruner.criteria.SnipMomentumCriterion



Functions
~~~~~~~~~

.. autoapisummary::

   neural_compressor.compression.pruner.criteria.register_criterion
   neural_compressor.compression.pruner.criteria.get_criterion



.. py:function:: register_criterion(name)

   Register a criterion to the registry.


.. py:function:: get_criterion(config, modules)

   Get registered criterion class.


.. py:class:: PruningCriterion(modules, config)


   Pruning base criterion.

   :param config: A config dict object that includes information about pruner and pruning criterion.
   :param modules: A dict {"module_name": Tensor} that stores the pruning modules' weights.

   .. attribute:: scores

      A dict {"module_name": Tensor} that stores the scores of pruning modules.


.. py:class:: MagnitudeCriterion(modules, config)




   Pruning criterion.

   The magnitude criterion_class is derived from PruningCriterion.
   The magnitude value is used to score and determine if a weight is to be pruned.

   :param config: A config dict object that includes information about pruner and pruning criterion.
   :param modules: A dict {"module_name": Tensor} that stores the pruning modules' weights.

   .. attribute:: scores

      A dict {"module_name": Tensor} that stores the scores of pruning modules.


.. py:class:: GradientCriterion(modules, config)




   Pruning criterion.

   The gradient criterion_class is derived from PruningCriterion.
   The absolute value of gradient is used to score and determine if a weight is to be pruned.

   :param config: A config dict object that includes information about pruner and pruning criterion.
   :param modules: A dict {"module_name": Tensor} that stores the pruning modules' weights.

   .. attribute:: scores

      A dict {"module_name": Tensor} that stores the scores of pruning modules.


.. py:class:: SnipCriterion(modules, config)




   Pruning criterion.

   The snip criterion_class is derived from PruningCriterion.
   The product of magnitude and gradient is used to score and determine if a weight is to be pruned.
   Please refer to SNIP: Single-shot Network Pruning based on Connection Sensitivity.
   (https://arxiv.org/abs/1810.02340)

   :param config: A config dict object that includes information about pruner and pruning criterion.
   :param modules: A dict {"module_name": Tensor} that stores the pruning modules' weights.

   .. attribute:: scores

      A dict {"module_name": Tensor} that stores the scores of pruning modules.


.. py:class:: SnipMomentumCriterion(modules, config)




   Pruning criterion.

   The snip_momentum criterion_class is derived from PruningCriterion.
   A momentum mechanism is used to calculate snip score, which determines if a weight is to be pruned.

   :param config: A config dict object that includes information about pruner and pruning criterion.
   :param modules: A dict {"module_name": Tensor} that stores the pruning modules' weights.
   :param alpha: A parameter that determines how much of the snip score is preserved from last pruning step.
   :param beta: A parameter that determines how much of the snip score is updated at the current step.

   .. attribute:: scores

      A dict {"module_name": Tensor} that stores the scores of pruning modules.


